# RecapFlow-automation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
community-brain/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
community-brain/chunks/: manifest.json
community-brain/config/: .env.example  canonicalization-proposals.yaml  chunking.yaml  entity-registry.yaml  extraction-config.yaml  query-cues.yaml  speaker-aliases.json  speaker-aliases.yaml
community-brain/docs/: DEPLOYMENT.md
community-brain/lancedb-backups/: lancedb-20260429T020701Z.tgz  lancedb-20260429T020753Z.tgz
community-brain/open-webui/: SETUP.md  docker-compose.yml
community-brain/raw-chunks/: all-chunks.jsonl
community-brain/scripts/: com.communitybrain.retrieval.plist  start-retrieval-server.sh
community-brain/tests/: test_apply_canonicalizations.py  test_backfill.py  test_bm25_synthesis.py  test_bm25_synthesis_date_variants.py  test_candidate_injection.py  test_canonicalize.py  test_chunk_historical.py  test_chunk_utils.py  test_cli_verify_corpus_clean_v3.py  test_cli_write_corpus_manifest.py  test_config_loader.py  test_convergent_refactor.py  test_corpus_verify_readonly.py  test_cue_rules.py  test_cue_rules_match_strategies.py  test_cue_rules_recruit.py  test_cue_rules_speaker_auto.py  test_distribution_mode_routes.py  test_embed.py  test_end_to_end.py  test_filter.py  test_filter_citation_guard.py  test_filter_rendering_v4.py  test_fts_lifecycle.py  test_golden_queries.py  test_health_endpoint_extended.py  test_ingestion_chunker.py  (+28 more)
(+1006 files in other folders)
