[project]
name = "community-brain"
version = "0.3.0"
description = "Vectorized knowledge base from AI community coaching calls"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "tiktoken>=0.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.1",
    "tqdm>=4.66",
    "lancedb>=0.15",
    "ollama>=0.4",
    "openai>=1.50",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "no_mock_api_key: skip auto-mocking OPENROUTER_API_KEY for a test",
]
